--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,5 +1,7 @@
 {% from "macros.html" import stalkback_logo, footer_link, menu_window, user_avatar_linked with context%}
 
+<!-- This is the base template that all other templates will inherit -->
+
 <!doctype html>
 <html>
     <head>
@@ -8,7 +10,7 @@
         <script src="{{ url_for('static', filename='script.js') }}"></script> 
     </head>
     <body>
-        <!-- HEADER -->
+        <!-- SITE HEADER -->
         <div class="header">
             <div class="header-logo">
                 <a href="{{ url_for('index') }}">
@@ -16,6 +18,8 @@
                     {{ stalkback_logo() }}
                 </a>
             </div>
+
+            <!-- Show the navigation menu button if the user is logged in -->
             {% if current_user.is_authenticated %}
                 <div class="menu-button" onclick="toggleElDisplay('menu-container')">
                     <svg id="svg-menu" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 122.88 96.91" style="enable-background:new 0 0 122.88 96.91" xml:space="preserve">
@@ -27,7 +31,8 @@
             {% endif %}
         </div>
 
-        <!-- SEARCH BAR -->
+        <!-- WHERE STUFF ABOVE THE MAIN CONTENT SHOWS -->
+        <!-- Typically the search bar -->
         {% block content_header %}{% endblock %}
 
         <!-- CONTENT -->
@@ -35,7 +40,7 @@
             {% block content %}{% endblock %}
         </div>
 
-        <!-- FOOTER -->
+        <!-- SITE FOOTER -->
         <div class="footer">
             © 2021 Alinda Heng
             <div class="footer-links-container">
