--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -7,6 +7,7 @@
 {% endblock %}
 
 {% block content %}
+    <!-- DASHBOARD HEADER -->
     <div class="dashboard-header">
         <table>
             <td class="user-av-med" style="padding: 0.5em">
@@ -19,6 +20,8 @@
             </td>
         </table>
     </div>
+
+    <!-- DASHBOARD QUICK LINKS -->
     <div class="dashboard-quick-links">
         <a href="{{ url_for('categories') }}">Manage categories</a><br>
         <a href="{{ url_for('liked_posts') }}">Liked posts</a><br>
@@ -26,6 +29,7 @@
         <a href="{{ url_for('stalklist', username = current_user.username, rel = 'stalkers') }}">My stalkers</a><br>
     </div>
 
+    <!-- STALKED POSTS FEED -->
     {% for post in stalked_posts %}
         <p>{{ user_submission(post) }}</p>
     {% endfor %}
