Comments for JS file

--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -40,7 +40,7 @@
         </form></p>
     </fieldset>
     <!-- ACCOUNT DELETION -->
-    <h3><a href="javascript:deleteConfirmation();">Delete account</a></h3>
+    <h3><a href="javascript:toggleElDisplay('delete-confirm');">Delete account</a></h3>
     <div id="delete-confirm">
         <fieldset class="info-box">
             <!-- DELETION PASSWORD CONFIRMATION -->
