--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -108,7 +108,7 @@
                 <!-- Edit profile -->
                 <a href="{{ url_for('edit_prof', category = category) }}">
                     <div style="display:flex; float:right;">
-                        <svg class="profile-button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 122.88 121.51">
+                        <svg class="profile-tool-button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 122.88 121.51">
                             <title>Edit profile</title>
                             <path d="M28.66,1.64H58.88L44.46,16.71H28.66a13.52,13.52,0,0,0-9.59,4l0,0a13.52,13.52,
                                     0,0,0-4,9.59v76.14H91.21a13.5,13.5,0,0,0,9.59-4l0,0a13.5,13.5,0,0,0,4-9.59V77.3l15.07-15.74V92.85a28.6,28.6,
@@ -120,7 +120,7 @@
                 <!-- Create new post -->
                 <a href="{{ url_for('post', category = category) }}">
                     <div style="display:flex; float:right;">
-                        <svg class="profile-button" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="122.879px" height="122.88px" 
+                        <svg class="profile-tool-button" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="122.879px" height="122.88px" 
                                 viewBox="0 0 122.879 122.88" enable-background="new 0 0 122.879 122.88" xml:space="preserve">
                             <title>Create new post</title>
                             <g><path d="M8.773,0h105.332c2.417,0,4.611,0.986,6.199,2.574c1.589,1.588,2.574,3.783,2.574,6.199v105.333 c0,2.416-0.985,4.61-2.574,
