--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -4,7 +4,7 @@
 <!-- Profile header -->
 {% block content_header %}
     <div class="prof-header">
-        <img class="user-av" src="{{ user.avatar_url }}">
+        <img class="user-av" src="{{ user.get_avatar() }}">
         <p>
             <span style="font-size: 1.5em;">{{ user.display_name }}
                 {% if current_user.is_stalking(user) %}
