--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -7,7 +7,7 @@
         <br>
         <!-- USER AVATAR -->
         <div style="margin: auto; width: 100%; text-align: center;">
-            <img src="{{ current_user.avatar_url }}" style="width: 100px;"><br>
+            <img class="user-av" src="{{ current_user.get_avatar() }}"><br>
         </div>
 
         <!-- BROWSE NEW AVATAR -->
