Show deleted comment notice instead of contents if comment author has deleted their account

--- a/app/static/default.css
+++ b/app/static/default.css
@@ -541,8 +541,8 @@ textarea:focus, input:focus {
     width: 5em;
 }
 
-.user-deleted-name {
-    color: rgb(var(--color-text), 0.5);
+.user-deleted-text {
+    color: rgb(var(--color-text), 0.3);
 }
 
 /* Post footer */
